# AutoDemoReview

./: .env.example  .gitignore  README.md  requirements.txt
demos/: .gitkeep
rust/: Cargo.toml
rust/codec/: Cargo.toml
rust/codec/src/: lib.rs
rust/codec/tests/: fixture_parity.rs  roundtrip.rs
rust/extract/: Cargo.toml
rust/extract/src/: dp2.rs  lib.rs  manifest.rs  mapscal.rs  weapons.rs
rust/extract/tests/: logic.rs
rust/viewer/: Cargo.toml
rust/viewer/src/: coords.rs  lib.rs  orbit.rs  scene.rs  state.rs  util.rs
rust/viewer/www/: index.html
src/: coach.py  parse_demo.py
src/demoreview/: __init__.py  __main__.py  analysis.py  binfmt.py  build3d.py  build3d_app.py  build3d_scene.py  cli.py  grenades.py  maps.py  parsing.py  render.py  replay.py  replay3d.py  stats.py
tests/: gen_fixture.py  replay3d_decoder.test.mjs  test_binfmt.py
tests/fixtures/: synthetic_round.json
web/: __init__.py  __main__.py  app.py  career.py  config.py  coords3d.mjs  db.py  migrations.py  participants.py  pipeline.py  replay3d_decoder.mjs  steam_openid.py
web/static/: app.css
web/templates/: base.html  error.html  landing.html  profile.html  stats.html  upload.html
