[workspace]
resolver = "2"
members = ["codec", "extract", "viewer"]

# Size-optimized release: the viewer's Rust-side math is trivial (interpolating
# 10 players), so wasm download size dominates perceived load time, not opt-level.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "debuginfo"

# ...but the demo parser is compute-heavy (native CLI only, never shipped to wasm):
# keep it at full speed inside the size-optimized profile.
[profile.release.package.parser]
opt-level = 3

[profile.release.package.csgoproto]
opt-level = 3
